<resources>
    <string name="app_name">Todo</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="required_field">This field is required!</string>
    <string name="action_add">add</string>
    <string name="refresh_action">refresh</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_todo_list">TodoListActivity</string>
    <string name="what_s_need_to_be_done">What\'s need to be done?</string>
    <string name="add_todo">Add Todo</string>
    <string name="done">Done</string>
</resources>
