<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.praful.todo.AddTodoActivity">

    <EditText
        android:id="@+id/content_edit_text"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:hint="@string/what_s_need_to_be_done"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/done_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/done"
        android:textSize="15dp"
        android:layout_below="@+id/content_edit_text"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/add_todo"
        android:textAllCaps="false"
        android:layout_below="@+id/done_checkbox"/>

</RelativeLayout>
